--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blackpuschel/node-red-deutsche-bahn",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Retrieve real time information about the trains of Deutsche Bahn.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,7 +11,8 @@
   "node-red": {
     "nodes": {
         "deutsche-bahn-stops": "deutsche-bahn-stops/deutsche-bahn-stops.js",
-        "deutsche-bahn-trips": "deutsche-bahn-trips/deutsche-bahn-trips.js"
+        "deutsche-bahn-trips": "deutsche-bahn-trips/deutsche-bahn-trips.js",
+        "deutsche-bann-stations": "deutsche-bahn-stations/deutsche-bahn-stations.js"
     }
   }
 }
